--- a/latex/5.tex
+++ b/latex/5.tex
@@ -11,26 +11,17 @@
 \centering
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline
-\multirow{2}{*}{\textbf{S.No}} &amp; \multirow{2}{*}{\textbf{USN}} &amp;
-\multirow{2}{*}{\textbf{Student Name}} &amp; \multicolumn{3}{c|}{\textbf{Marks}} \\
+\multirow{2}{*}{\textbf{S.No}} & \multirow{2}{*}{\textbf{USN}} & 
+\multirow{2}{*}{\textbf{Student Name}} & \multicolumn{3}{c|}{\textbf{Marks}} \\
 
 \cline{4-6}
-&amp; &amp; &amp; \textbf{Subject1} &amp; \textbf{Subject2} &amp; \textbf{Subject3} \\
+ &  &  & \textbf{Subject1} & \textbf{Subject2} & \textbf{Subject3} \\
 \hline
-\multicolumn{1}{|c|}{1} &amp; \multicolumn{1}{c|}{4XX22XX01} &amp;
-
-\multicolumn{1}{c|}{Name 1} &amp; 89 &amp; 60 &amp; 90 \\
-
+1 & 4XX22XX01 & Name 1 & 89 & 60 & 90 \\
 \hline
-\multicolumn{1}{|c|}{2} &amp; \multicolumn{1}{c|}{4XX22XX02} &amp;
-
-\multicolumn{1}{c|}{Name 2} &amp; 78 &amp; 45 &amp; 98 \\
-
+2 & 4XX22XX02 & Name 2 & 78 & 45 & 98 \\
 \hline
-\multicolumn{1}{|c|}{3} &amp; \multicolumn{1}{c|}{4XX22XX03} &amp;
-
-\multicolumn{1}{c|}{Name 3} &amp; 67 &amp; 55 &amp; 59 \\
-
+3 & 4XX22XX03 & Name 3 & 67 & 55 & 59 \\
 \hline
 
 \end{tabular}
